Closed
Bug 704143
Opened 14 years ago
Closed 14 years ago
[Azure] Crash in nsCanvasRenderingContext2DAzure::InitializeWithTarget
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: scoobidiver, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
960 bytes,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
It's a low volume crash (above #300 crasher in 8.0).
It happens mainly with NVIDIA drivers.
Signature nsCanvasRenderingContext2DAzure::InitializeWithTarget(mozilla::gfx::DrawTarget*, int, int)
UUID 6df95267-6d0b-45a6-8fcb-43e3b2111120
Date Processed 2011-11-20 12:47:03.274382
Uptime 4584
Last Crash 23.1 hours before submission
Install Age 23.6 hours since version was first installed.
Install Time 2011-11-19 21:11:19
Product Firefox
Version 11.0a1
Build ID 20111119031209
Release Channel nightly
OS Windows NT
OS Version 6.1.7601 Service Pack 1
Build Architecture x86
Build Architecture Info GenuineIntel family 6 model 42 stepping 7
Crash Reason EXCEPTION_ACCESS_VIOLATION_READ
Crash Address 0x0
App Notes AdapterVendorID: 10de, AdapterDeviceID: 1200, AdapterSubsysID: 15613842, AdapterDriverVersion: 8.17.12.8579
D2D? D2D+
DWrite? DWrite+
D3D10 Layers? D3D10 Layers+
Frame Module Signature [Expand] Source
0 xul.dll nsCanvasRenderingContext2DAzure::InitializeWithTarget content/canvas/src/nsCanvasRenderingContext2DAzure.cpp:1315
1 xul.dll nsCanvasRenderingContext2DAzure::SetDimensions content/canvas/src/nsCanvasRenderingContext2DAzure.cpp:1274
2 xul.dll nsHTMLCanvasElement::UpdateContext content/html/content/src/nsHTMLCanvasElement.cpp:620
3 xul.dll nsHTMLCanvasElement::GetContext content/html/content/src/nsHTMLCanvasElement.cpp:541
4 xul.dll nsIDOMHTMLCanvasElement_GetContext obj-firefox/js/xpconnect/src/dom_quickstubs.cpp:18754
5 mozjs.dll js::InvokeKernel js/src/jsinterp.cpp:629
6 mozjs.dll js::Interpret js/src/jsinterp.cpp:3950
7 mozjs.dll js::RunScript js/src/jsinterp.cpp:584
8 mozjs.dll js::InvokeKernel js/src/jsinterp.cpp:647
9 mozjs.dll js::Invoke js/src/jsinterp.cpp:679
10 mozjs.dll JS_CallFunctionValue js/src/jsapi.cpp:5223
11 xul.dll nsJSContext::CallEventHandler dom/base/nsJSEnvironment.cpp:1942
12 xul.dll nsGlobalWindow::RunTimeout dom/base/nsGlobalWindow.cpp:9311
13 xul.dll nsGlobalWindow::TimerCallback dom/base/nsGlobalWindow.cpp:9751
14 xul.dll nsTimerImpl::Fire xpcom/threads/nsTimerImpl.cpp:425
15 xul.dll nsTimerEvent::Run xpcom/threads/nsTimerImpl.cpp:521
16 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:631
17 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:134
18 xul.dll xul.dll@0xbf6f8f
19 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:201
20 xul.dll _SEH_epilog4
21 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:175
22 xul.dll nsThreadManager::GetCurrentThread xpcom/threads/nsThreadManager.cpp:216
23 xul.dll nsBaseAppShell::Run widget/src/xpwidgets/nsBaseAppShell.cpp:189
24 xul.dll nsAppShell::Run widget/src/windows/nsAppShell.cpp:257
More reports at:
https://crash-stats.mozilla.com/report/list?range_value=4&range_unit=weeks&signature=nsCanvasRenderingContext2DAzure%3A%3AInitializeWithTarget%28mozilla%3A%3Agfx%3A%3ADrawTarget*%2C%20int%2C%20int%29
| Reporter | ||
Comment 1•14 years ago
|
||
There is a spike in startup crashes from 11.0a1/20111215.
The regression window for the spike is:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fd6ab19f312c&tochange=beac16509534
| Assignee | ||
Comment 2•14 years ago
|
||
Currently #8 in Top Crashers for Firefox 11.0a1.
tracking-firefox11:
--- → ?
| Assignee | ||
Comment 3•14 years ago
|
||
Is that a possible cause for this crash?
Attachment #582676 -
Flags: review?(bas.schouten)
Updated•14 years ago
|
Attachment #582676 -
Flags: review?(bas.schouten) → review+
| Assignee | ||
Comment 4•14 years ago
|
||
Assignee: nobody → matspal
tracking-firefox11:
? → ---
Whiteboard: [inbound]
Target Milestone: --- → mozilla11
Comment 5•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 6•13 years ago
|
||
This crash happens to me in 10.0.2. While I'm sure that the fix will prevent the crash, all that will happen is that getContext will start to fail.
In my case, firefox will run for a few hours on a single web page (that does a fair amount of canvas operations and google maps operations) and then it crashes.
goto http://pskreporter.info/pskmapn?n1dq
and wait (with the page visible) and after a few hours on windows 7 it will crash. This was seen on two different systems. Yahoo toolbar not installed.
| Reporter | ||
Updated•13 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•