Bug 704143 - Null check to avoid crashing.  r=bas